--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Nuclues Store- a one stop platform for all your electronic needs
+      Electric Store- a one stop platform for all your electronic needs
     </title>
   </head>
   <body>
